# chebyshev-hofbauer-resonances

./: .gitignore  Denison Research (1).ipynb  README.md  logbook.md  pyproject.toml  requirements.txt
notebooks/: 01_hofbauer_extension.ipynb  02_chebyshev_test.ipynb  03_adjacency_to_super.ipynb  03_ulams_method.ipynb  04_super_adjacency_matrix.ipynb  04_ulams_method.ipynb  05_eigenvalue_error.ipynb  eigenvalue_error.ipynb
notebooks/general_tent_map/: 00_dev.ipynb  01_adjacency_check.ipynb
notebooks/linear_tent_map/: 01_hofbauer_extension.ipynb  04_super_adjacency_matrix.ipynb  05_eigenvalue_error.ipynb
scripts/: adjacency_to_super.py  hofbauer_functions.py  hofbauer_logistic  hofbauer_logistic.py  operator_approx.py  ulams_method.py
src/chebyshev_hofbauer_resonances/: hofbauer_functions.py  hofbauer_logistic.py  ulams_method.py
src/chebyshev_hofbauer_resonances/general_tent_map/: adjacency_to_super.py  approx_transfer_op.py  hofbauer_tower.py  operator_approx.py  ulams_method.py
src/chebyshev_hofbauer_resonances/linear_tent_map/: adjacency_to_super.py  operator_approx.py
