[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chebyshev_hofbauer_resonances"
version = "0.2"
dependencies = [
    "matplotlib==3.10.0",
    "networkx==3.4.2",
    "numpy<2",
    "pandas==2.2.3",
    "scipy==1.15.1"
]

[tool.setuptools.packages.find]
where = ["src"]
